PSoC 4 Compass Modbus Slave.cydsn/CortexM0/ARM_GCC_484/Debug/PSoC 4 Compass Modbus Slave-ARM_GCC_484-Debug-REBUILD.log
--------------- Rebuild Started: 03/07/2015 14:40:31 Project: PSoC 4 Compass Modbus Slave, Configuration: ARM GCC 4.8.4 Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_484\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\interrupts.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\Modbus.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\i2cfunctions.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\hmc5883l.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\HMC5883L-Compass.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\i2c.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\TX_LED.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\RX_LED.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\MessageTimer.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\MessageTimer_PM.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_SPI_UART.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_SPI_UART_INT.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_PM.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_UART.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_UART_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_rx.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_SCBCLK.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\ModbusUART_tx.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\MessageTimerClock.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\P0_2_LED.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\MessageReceived.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\EndOfMessage.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\TimerPin.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\writeEnable.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\SpeedTimer.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\SpeedTimer_PM.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\SpeedInterrupt.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\timer_clock.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_I2C_INT.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_I2C.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_I2C_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_I2C_MASTER.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_PM.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_SCBCLK.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_sda.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_scl.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\I2C_MASTER_SCB_IRQ.o"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\PSoC 4 Compass Modbus Slave.hex"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\PSoC 4 Compass Modbus Slave.elf"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\PSoC 4 Compass Modbus Slave.map"
Deleting file ".\PSoC 4 Compass Modbus Slave.cycdx"
Deleting file ".\PSoC 4 Compass Modbus Slave.svd"
Deleting file ".\PSoC 4 Compass Modbus Slave.rpt"
Deleting file ".\PSoC 4 Compass Modbus Slave_timing.html"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\.deps\C_FILE.P"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\.deps\ARM_C_FILE.P"
Deleting file ".\CortexM0\ARM_GCC_484\Debug\.deps\GNU_ARM_ASM_FILE.P"
cydsfit.exe -.appdatapath "C:\Users\Sam\AppData\Local\Cypress Semiconductor\PSoC Creator\3.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\Sam\OneDrive\Github\PSoC-4-Compass-Sensor\PSoC 4 Compass Modbus Slave.cydsn\PSoC 4 Compass Modbus Slave.cyprj" -d CY8C4245AXI-483 -s "C:\Users\Sam\OneDrive\Github\PSoC-4-Compass-Sensor\PSoC 4 Compass Modbus Slave.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -I.\Generated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_484\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\main.c -o .\CortexM0\ARM_GCC_484\Debug\main.o
.\main.c: In function 'main':
.\main.c:85:7: error: 'struct ModbusData' has no member named 'speedRPSScaler'
     mb.speedRPSScaler = 1000;
       ^
.\main.c:86:7: error: 'struct ModbusData' has no member named 'motorCurrentScaler'
     mb.motorCurrentScaler = 100;
       ^
.\main.c:90:11: warning: unused variable 'ida' [-Wunused-variable]
     uint8 ida = 0;
           ^
.\main.c:80:9: warning: unused variable 'i' [-Wunused-variable]
     int i = 0;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 03/07/2015 14:41:17 ---------------
